fix: add flex-wrap to stackbar for improved layout responsiveness

--- a/src/styles/layouts.module.scss
+++ b/src/styles/layouts.module.scss
@@ -45,6 +45,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  flex-wrap: wrap;
 
   &--tight {
     @extend .stackbar;
